[gd_scene load_steps=4 format=3 uid="uid://c7k2if286c54n"]

[ext_resource type="Texture2D" uid="uid://66e038fnmrpt" path="res://scene/judge_scene/sprites/UI books & more.png" id="1_8dvmq"]
[ext_resource type="Script" path="res://scene/judge_scene/script/judge_options.gd" id="1_q5b83"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bosey"]
atlas = ExtResource("1_8dvmq")
region = Rect2(720, 16, 48, 48)

[node name="JudgeOptions" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_q5b83")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 300.0
offset_bottom = 200.0
size_flags_vertical = 3
color = Color(0.223103, 0.223103, 0.223103, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 238.0
offset_bottom = 76.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FirstSelection" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "天堂"
popup/item_1/text = "地狱"
popup/item_1/id = 1
popup/item_2/text = "人间"
popup/item_2/id = 2

[node name="Second-tiantang" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "初级天堂"
popup/item_1/text = "中级天堂"
popup/item_1/id = 1
popup/item_2/text = "高级天堂"
popup/item_2/id = 2

[node name="Second-diyu" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
item_count = 18
popup/item_0/text = "拔舌地狱"
popup/item_1/text = "剪刀地狱"
popup/item_1/id = 1
popup/item_2/text = "铁树地狱"
popup/item_2/id = 2
popup/item_3/text = "孽镜地狱"
popup/item_3/id = 3
popup/item_4/text = "蒸笼地狱"
popup/item_4/id = 4
popup/item_5/text = "铜柱地狱"
popup/item_5/id = 5
popup/item_6/text = "刀山地狱"
popup/item_6/id = 6
popup/item_7/text = "冰山地狱"
popup/item_7/id = 7
popup/item_8/text = "油锅地狱"
popup/item_8/id = 8
popup/item_9/text = "牛坑地狱"
popup/item_9/id = 9
popup/item_10/text = "石压地狱"
popup/item_10/id = 10
popup/item_11/text = "舂臼地狱"
popup/item_11/id = 11
popup/item_12/text = "血池地狱"
popup/item_12/id = 12
popup/item_13/text = "枉死地狱"
popup/item_13/id = 13
popup/item_14/text = "磔刑地狱"
popup/item_14/id = 14
popup/item_15/text = "火山地狱"
popup/item_15/id = 15
popup/item_16/text = "石磨地狱"
popup/item_16/id = 16
popup/item_17/text = "刀锯地狱"
popup/item_17/id = 17

[node name="Second-renjian" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "人"
popup/item_1/text = "动物"
popup/item_1/id = 1

[node name="Third-renjian" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "人"
popup/item_0/icon = SubResource("AtlasTexture_bosey")
popup/item_1/text = "动物"
popup/item_1/id = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Judge" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "判决"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "取消"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/FirstSelection" to="." method="_on_first_selection_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Judge" to="." method="_on_judge_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Cancel" to="." method="_on_cancel_pressed"]
